Fix issue with z-index on input-actions

--- a/packages/vapor/scss/controls/multiline-field.scss
+++ b/packages/vapor/scss/controls/multiline-field.scss
@@ -66,6 +66,7 @@
     position: absolute;
     top: 4px;
     right: -2px;
+    z-index: 1;
 
     .js-add-value-button,
     .js-delete-value-button {
